--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,25 @@
-﻿<Window x:Class="TemplateWPF.MainWindow"
+﻿<mah:MetroWindow x:Class="TemplateWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:TemplateWPF.Views"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             
+        Title="TemplateWPF"
+        Width="1000"
+        MinWidth="1000"
+        Height="650"
+        MinHeight="650"
+        FontFamily="Roboto"
+        
+        TitleAlignment="Center"
+        ResizeMode="CanResizeWithGrip"
+        WindowTransitionsEnabled="False"
+        WindowStartupLocation="CenterScreen"
+        
+        mc:Ignorable="d">
         
         <views:MainView/>
     
-</Window>
+</mah:MetroWindow>
