ajout des var global

--- a/Configs/config.xaml
+++ b/Configs/config.xaml
@@ -2,12 +2,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
+    <!-- App -->
     <sys:String x:Key="Author">LaM0uette</sys:String>
     <sys:String x:Key="AppName">TemplateWPF</sys:String>
     <sys:String x:Key="AppVersion">0.1</sys:String>
     
+    <!-- Window -->
     <sys:Double x:Key="AppWidth">1000</sys:Double>
-    <sys:Double x:Key="AppHeight">750</sys:Double>
+    <sys:Double x:Key="AppHeight">650</sys:Double>
     <sys:Double x:Key="WgHeight">25</sys:Double>
     
 </ResourceDictionary>
