--- a/Themes/CurrentImg.xaml
+++ b/Themes/CurrentImg.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Themes/Colors/Base.xaml"/>
+        <ResourceDictionary Source="/Themes/Img/Base.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
