--- a/Themes/Styles/Base/Pages/body.xaml
+++ b/Themes/Styles/Base/Pages/body.xaml
@@ -7,6 +7,8 @@
         <Setter Property="Width" Value="10"></Setter>
         <Setter Property="Height" Value="10"></Setter>
     </Style>
+    <!-- /Separator -->
+    
     
     <!-- Label -->
     <Style x:Key="LabelDemo" TargetType="{x:Type Label}">
@@ -18,6 +20,8 @@
         <Setter Property="BorderBrush" Value="{StaticResource RgbB1}"></Setter>
         <Setter Property="Width" Value="400"></Setter>
     </Style>
+    <!-- /Label -->
+    
     
     <!-- Border -->
     <Style x:Key="BorderDemo" TargetType="{x:Type Border}">
@@ -25,13 +29,16 @@
         <Setter Property="BorderThickness" Value="1"></Setter>
         <Setter Property="BorderBrush" Value="{StaticResource RgbB1}"></Setter>
     </Style>
+    <!-- /Border -->
+    
     
     <!-- StackPanel -->
-    <!-- DemoWidget -->
+        <!-- DemoWidget -->
     <Style x:Key="StkPanDemo" TargetType="StackPanel">
         <Setter Property="Orientation" Value="Horizontal"></Setter>
         <Setter Property="HorizontalAlignment" Value="Center"></Setter>
         <Setter Property="Margin" Value="10"></Setter>
     </Style>
+    <!-- /StackPanel -->
 
 </ResourceDictionary>
