--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -5,6 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d">
     <Grid>
-        
+        <Button Width="200" Height="200">Test</Button>
     </Grid>
 </UserControl>
