--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,7 +25,6 @@
         mc:Ignorable="d">
         
         <!-- Header -->
-        <!-- ButtonTitleBar -->
         <mah:MetroWindow.WindowButtonCommands>
                 <mah:WindowButtonCommands 
                         Minimize="Réduire"
@@ -41,6 +40,7 @@
                 />
         </mah:MetroWindow.WindowButtonCommands>
         
+        <!-- Body -->
         <Grid Background="{StaticResource RgbM1}">
                 <views:MainView/>
         </Grid>
