ajout de boutons dans le suer control

--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -5,6 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d">
     <Grid>
-        <Button Width="200" Height="200">Test</Button>
+        
+        <StackPanel>
+            <Label Style="{StaticResource LabelDemo}" Content="Buttons"/>
+            <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
+                <Button Style="{StaticResource ButtonPlainM1}" Width="200" Margin="5 0 5 5">RgbM1</Button>
+                <Button Style="{StaticResource ButtonPlainM2}" Width="200" Margin="5 0 5 5">RgbM2</Button>
+                <Button Style="{StaticResource ButtonPlainM3}" Width="200" Margin="5 0 5 5">RgbM3</Button>
+            </StackPanel>
+        </StackPanel>
+        
     </Grid>
 </UserControl>
