--- a/Themes/Styles/Base/Pages/body.xaml
+++ b/Themes/Styles/Base/Pages/body.xaml
@@ -13,12 +13,9 @@
     <!-- Label -->
     <Style x:Key="LabelDemo" TargetType="{x:Type Label}">
         <Setter Property="Foreground" Value="{StaticResource RgbB1}"></Setter>
-        <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
-        <Setter Property="FontSize" Value="25"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="Left"></Setter>
+        <Setter Property="FontSize" Value="20"></Setter>
         <Setter Property="FontWeight" Value="Bold"></Setter>
-        <Setter Property="BorderThickness" Value="0 0 0 1"></Setter>
-        <Setter Property="BorderBrush" Value="{StaticResource RgbB1}"></Setter>
-        <Setter Property="Width" Value="400"></Setter>
     </Style>
     <!-- /Label -->
     
