--- a/Themes/Styles/Base/Widgets/button.xaml
+++ b/Themes/Styles/Base/Widgets/button.xaml
@@ -1,7 +1,66 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <!-- Base -->
     <Style x:Key="ButtonBase" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="{StaticResource WgHeight}"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        
+        <Setter Property="Effect">
+            <Setter.Value>
+                <DropShadowEffect Color="#FF242424" Direction="320" ShadowDepth="3" BlurRadius="4" Opacity="0.2" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <!-- /Base -->
+    
+    
+    <!-- Plain -->
+    <Style x:Key="ButtonPlain" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBase}">
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
+        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                    
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Mode=self}, Path=Tag}"/>
+                            <Setter Property="Foreground" Value="{StaticResource RgbM1}"/>
+                        </Trigger>
+            
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="Foreground" Value="{StaticResource RgbB1}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}"/>
+    
+    <Style x:Key="ButtonPlainM1" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+    </Style>
+    
+    <Style x:Key="ButtonPlainM2" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbM2}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM3}"/>
+    </Style>
+    
+    <Style x:Key="ButtonPlainM3" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbM3}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+    </Style>
+    <!-- /Plain -->
+    
+    
+    <!-- Txt -->
+    <Style x:Key="ButtonTxt" TargetType="{x:Type Button}">
         <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"/>
@@ -37,8 +96,6 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBase}">
-    </Style>
+    <!-- /Txt -->
     
 </ResourceDictionary>
