--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -3,18 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:views="clr-namespace:TemplateWPF.Views"
              mc:Ignorable="d">
     <Grid>
         
         <StackPanel>
-            
-            <Label Style="{StaticResource LabelDemo}" Content="Buttons"/>
-            
-            <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <Button Style="{StaticResource ButtonPlainM1}" Width="200" Margin="5 0 5 5">RgbM1</Button>
-                <Button Style="{StaticResource ButtonPlainM2}" Width="200" Margin="5 0 5 5">RgbM2</Button>
-                <Button Style="{StaticResource ButtonPlainM3}" Width="200" Margin="5 0 5 5">RgbM3</Button>
-            </StackPanel>
+            <views:ButtonView/>
         </StackPanel>
         
     </Grid>
