--- a/Views/ButtonView.xaml
+++ b/Views/ButtonView.xaml
@@ -7,13 +7,12 @@
     <Grid>
         
         <StackPanel>
-            
-            <Label Style="{StaticResource LabelDemo}" Content="Buttons"/>
-            
             <StackPanel Orientation="Horizontal" Margin="0 0 0 5">
-                <Button Style="{StaticResource ButtonPlainM1}" Width="200" Margin="5 0 5 5">RgbM1</Button>
-                <Button Style="{StaticResource ButtonPlainM2}" Width="200" Margin="5 0 5 5">RgbM2</Button>
-                <Button Style="{StaticResource ButtonPlainM3}" Width="200" Margin="5 0 5 5">RgbM3</Button>
+                <Button Style="{StaticResource ButtonPlainM1}" Width="150" Margin="5 0 5 5">RgbM1</Button>
+                <Button Style="{StaticResource ButtonPlainM2}" Width="150" Margin="5 0 5 5">RgbM2</Button>
+                <Button Style="{StaticResource ButtonPlainM3}" Width="150" Margin="5 0 5 5">RgbM3</Button>
+                <Button Style="{StaticResource ButtonPlainB1}" Width="150" Margin="5 0 5 5">RgbB1</Button>
+                <Button Style="{StaticResource ButtonPlainB2}" Width="150" Margin="5 0 5 5">RgbB2</Button>
             </StackPanel>
         </StackPanel>
         
