--- a/Themes/Styles/Base/Widgets/button.xaml
+++ b/Themes/Styles/Base/Widgets/button.xaml
@@ -56,6 +56,16 @@
         <Setter Property="Background" Value="{StaticResource RgbM3}"/>
         <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
     </Style>
+    
+    <Style x:Key="ButtonPlainB1" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbB1}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="ButtonPlainB2" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbB2}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+    </Style>
     <!-- /Plain -->
     
     
