--- a/Themes/Styles/Base/Widgets/button.xaml
+++ b/Themes/Styles/Base/Widgets/button.xaml
@@ -45,6 +45,8 @@
     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}"/>
     
     <Style x:Key="ButtonPlainM1" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
+        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
     </Style>
     
     <Style x:Key="ButtonPlainM2" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonPlain}">
@@ -70,18 +72,10 @@
     
     
     <!-- Txt -->
-    <Style x:Key="ButtonTxt" TargetType="{x:Type Button}">
+    <Style x:Key="ButtonTxt" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBase}">
         <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
         <Setter Property="Background" Value="{StaticResource RgbM1}"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"/>
-        <Setter Property="Height" Value="{StaticResource WgHeight}"/>
-        <Setter Property="Cursor" Value="Hand"/>
-        
-        <Setter Property="Effect">
-            <Setter.Value>
-                <DropShadowEffect Color="#FF242424" Direction="320" ShadowDepth="3" BlurRadius="4" Opacity="0.2" />
-            </Setter.Value>
-        </Setter>
 
         <Setter Property="Template">
             <Setter.Value>
@@ -105,6 +99,31 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+    
+    <Style x:Key="ButtonTxtM1" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonTxt}">
+        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="ButtonTxtM2" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonTxt}">
+        <Setter Property="Background" Value="{StaticResource RgbM2}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM3}"/>
+    </Style>
+    
+    <Style x:Key="ButtonTxtM3" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonTxt}">
+        <Setter Property="Background" Value="{StaticResource RgbM3}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
+    </Style>
+    
+    <Style x:Key="ButtonTxtB1" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonTxt}">
+        <Setter Property="Background" Value="{StaticResource RgbB1}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM3}"/>
+    </Style>
+    
+    <Style x:Key="ButtonTxtB2" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonTxt}">
+        <Setter Property="Background" Value="{StaticResource RgbB2}"/>
+        <Setter Property="Tag" Value="{StaticResource RgbM3}"/>
     </Style>
     <!-- /Txt -->
     
