--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,7 @@
         WindowTransitionsEnabled="False"
         WindowStartupLocation="CenterScreen"
         Title="{StaticResource AppName}"
+        Icon="{StaticResource Main}"
         Width="{StaticResource AppWidth}"
         MinWidth="{StaticResource AppWidth}"
         Height="{StaticResource AppHeight}"
