--- a/Views/Demo/ButtonView.xaml
+++ b/Views/Demo/ButtonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TemplateWPF.Views.ButtonView"
+﻿<UserControl x:Class="TemplateWPF.Views.Demo.ButtonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
