--- a/Views/DemoViews.xaml
+++ b/Views/DemoViews.xaml
@@ -1,11 +1,16 @@
-﻿<UserControl x:Class="TemplateWPF.Views.MainView"
+﻿<UserControl x:Class="TemplateWPF.Views.DemoViews"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:views="clr-namespace:TemplateWPF.Views"
+             xmlns:demoViews="clr-namespace:TemplateWPF.Views.Demo"
              mc:Ignorable="d">
     <Grid>
-        <views:DemoViews/>
+        
+        <StackPanel Background="SlateGray">
+            <Label Style="{StaticResource LabelDemo}" Content="Buttons"/>
+            <demoViews:ButtonView/>
+        </StackPanel>
+        
     </Grid>
 </UserControl>
