--- a/Themes/Colors/Base.xaml
+++ b/Themes/Colors/Base.xaml
@@ -6,10 +6,10 @@
     <Color x:Key="CRgbM3">#FFFFFAFF</Color>
     <Color x:Key="CRgbB1">#FF44AAB8</Color>
     <Color x:Key="CRgbB2">#FFE53843</Color>
-    <Color x:Key="CRgbAll">#FF555870</Color>
+    <Color x:Key="CRgbAll">#FF555555</Color>
     <Color x:Key="CRgbOk">#A1E510</Color>
     <Color x:Key="CRgbOkBis">#2DC8AB</Color>
-    <Color x:Key="CRgbNok">#F11726</Color>
+    <Color x:Key="CRgbNok">#FFE53843</Color>
     <Color x:Key="CRgbNokBis">#FFDC562E</Color>
     
     <SolidColorBrush x:Key="RgbM1" Color="{StaticResource CRgbM1}"/>
