--- a/Themes/Styles/Base/Pages/body.xaml
+++ b/Themes/Styles/Base/Pages/body.xaml
@@ -16,6 +16,7 @@
         <Setter Property="HorizontalContentAlignment" Value="Left"></Setter>
         <Setter Property="FontSize" Value="20"></Setter>
         <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="Margin" Value="0 20 0 0"/>
     </Style>
     <!-- /Label -->
     
