--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -4,12 +4,6 @@
     <Style x:Key="CheckBoxBase" TargetType="{x:Type CheckBox}">
         <Setter Property="Height" Value="{StaticResource WgHeight}"/>
         <Setter Property="Cursor" Value="Hand"/>
-        
-        <Style.Resources>
-            <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="{DynamicResource RscRound}"></Setter>
-            </Style>
-        </Style.Resources>
     </Style>
     <!-- /Base -->
     
@@ -17,8 +11,8 @@
     <!-- Plain -->
     <Style x:Key="CheckBoxPlain" TargetType="CheckBox" BasedOn="{StaticResource CheckBoxBase}">
         <Setter Property="Tag" Value="{StaticResource RgbM2}"/>
-        <Setter Property="Background" Value="{StaticResource RgbM1}"/>
-        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Self}, Path=Tag}"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Foreground" Value="{StaticResource RgbM2}"/>
         
         <Setter Property="Template">
             <Setter.Value>
@@ -26,14 +20,14 @@
                     <BulletDecorator Background="Transparent">
                         <BulletDecorator.Bullet>
                             <Border x:Name="Border" 
-                                            Width="15" 
-                                            Height="15" 
-                                            CornerRadius="2" 
-                                            Background="Aqua"
+                                            Width="16" 
+                                            Height="16" 
+                                            CornerRadius="{DynamicResource RscRoundTiny}" 
+                                            Background="{TemplateBinding Background}"
                                             BorderThickness="1"
-                                            BorderBrush="Azure">
-                                <Path Width="7" 
-                                      Height="7" 
+                                            BorderBrush="{TemplateBinding Foreground}">
+                                <Path Width="8" 
+                                      Height="8" 
                                       x:Name="CheckMark"
                                       SnapsToDevicePixels="False" 
                                       Stroke="MediumVioletRed"
