--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -26,13 +26,8 @@
                                             Background="{TemplateBinding Background}"
                                             BorderThickness="1"
                                             BorderBrush="{TemplateBinding Foreground}">
-                                <Path Width="8" 
-                                      Height="8" 
-                                      x:Name="CheckMark"
-                                      SnapsToDevicePixels="False" 
-                                      Stroke="MediumVioletRed"
-                                      StrokeThickness="2"
-                                      Data="M 0 0 L 7 7 M 0 7 L 7 0" />
+                                <Image Source="{DynamicResource Main}"></Image>
+                                
                             </Border>
                         </BulletDecorator.Bullet>
                         <ContentPresenter Margin="4,0,0,0"
