--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -27,7 +27,6 @@
                                             BorderThickness="1"
                                             BorderBrush="{TemplateBinding Foreground}">
                                 <Image Source="{DynamicResource Main}"></Image>
-                                
                             </Border>
                         </BulletDecorator.Bullet>
                         <ContentPresenter Margin="4,0,0,0"
@@ -38,21 +37,16 @@
                     </BulletDecorator>
                     
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="False">
-                            <Setter TargetName="CheckMark" Property="Visibility" Value="Collapsed"/>
-                        </Trigger>
-                
-                        <Trigger Property="IsChecked" Value="{x:Null}">
-                            <Setter TargetName="CheckMark" Property="Data" Value="M 0 7 L 7 0" />
-                        </Trigger>
+                        <!-- <Trigger Property="IsChecked" Value="False"> -->
+                        <!--     <Setter TargetName="CheckMark" Property="Visibility" Value="Collapsed"/> -->
+                        <!-- </Trigger> -->
+                        <!-- -->
+                        <!-- <Trigger Property="IsChecked" Value="{x:Null}"> -->
+                        <!--     <Setter TargetName="CheckMark" Property="Data" Value="M 0 7 L 7 0" /> -->
+                        <!-- </Trigger> -->
                         
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter TargetName="Border" Property="Background" Value="IndianRed" />
-                        </Trigger>
-                        
-                        <Trigger Property="IsPressed" Value="true">
-                            <Setter TargetName="Border" Property="Background" Value="DarkBlue" />
-                            <Setter TargetName="Border" Property="BorderBrush" Value="MediumAquamarine" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
