--- a/Themes/Styles/Base/Widgets/checkBox.xaml
+++ b/Themes/Styles/Base/Widgets/checkBox.xaml
@@ -26,7 +26,7 @@
                                             Background="{TemplateBinding Background}"
                                             BorderThickness="1"
                                             BorderBrush="{TemplateBinding Foreground}">
-                                <Image Source="{DynamicResource Main}"></Image>
+                                <Image Source="{DynamicResource ImgCheck}"></Image>
                             </Border>
                         </BulletDecorator.Bullet>
                         <ContentPresenter Margin="4,0,0,0"
